--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -51,13 +51,15 @@ let links: NavBarLink[] = navBarConfig.links.map(
                         <Icon name="material-symbols:palette-outline" class="text-[1.25rem]"></Icon>
                     </button>
             )}
-            <LightDarkSwitch client:only="svelte"></LightDarkSwitch>
+            <!-- @ts-expect-error client:only 属性在 Svelte 组件上有类型问题 -->
+            <LightDarkSwitch client:only="svelte" />
             <button aria-label="Menu" name="Nav Menu" class="btn-plain scale-animation rounded-lg w-11 h-11 active:scale-90 md:!hidden" id="nav-menu-switch">
                 <Icon name="material-symbols:menu-rounded" class="text-[1.25rem]"></Icon>
             </button>
         </div>
         <NavMenuPanel links={links}></NavMenuPanel>
-        <DisplaySettings client:only="svelte"></DisplaySettings>
+        <!-- @ts-expect-error client:only 属性在 Svelte 组件上有类型问题 -->
+        <DisplaySettings client:only="svelte" />
     </div>
 </div>
 
